# sdk

./: .bumpversion.cfg  .env.config.dev  .flake8  .gitignore  .isort.cfg  .pylintrc  .pypirc  .readthedocs.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  RELEASE_NOTES.md  conftest.py  demo.env.config.dev  demo.env.secrets.dev  dev_containers.md  devcontainers.md  install-sdk.sh  main.py  pyproject.toml  pytest.ini  readme.md  release_notes.md  requirements-packaging.txt  requirements.txt  script_example.py  set-dev-env.sh  setup.py  subSubtitle_0_13.00898.srt  subtitles.srt  testcurl.sh
.devcontainer/: devcontainer.json
PlatformAPI/: api.py
docs/: conf.py  contributing.rst  index.rst  requirements.txt
medias/: __init__.py
tests/: build_output_assertions.py  test_async.py  test_audio_compositions.py  test_background_music.py  test_building_strategies.py  test_ci_providers_health_checks.py  test_colab_code.py  test_composite_video.py  test_concat.py  test_concurrency.py  test_fake_ml_gateway.py  test_ffmpeg_wrapper.py  test_filetools.py  test_gemini_integration.py  test_imported_video.py  test_model_providers.py  test_postprocessing.py  test_prompt.py  test_prompt_based_video.py  test_prompt_building_handlers.py  test_prompt_factory.py  test_quality_check.py  test_raw_fixed_image_video.py  test_raw_image_based_video.py  test_raw_multimodal_based_video.py  test_raw_text_based_video.py  test_replicate_wrapper.py  test_subtitles_extractors.py  test_video.py  test_video_building_async.py  test_video_building_handler.py  test_video_building_handlers.py  testing_medias.py  (+5 more)
(+418 files in other folders)
